--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
     <module>orko-job</module>
     <module>orko-common</module>
     <module>orko-app</module>
+    <module>orko-app-marketdata</module>
   </modules>
 
   <repositories>
@@ -203,7 +204,7 @@
 
     <!--<xchange.stream.groupid>com.gruelbox</xchange.stream.groupid> -->
     <xchange.stream.groupid>info.bitrich.xchange-stream</xchange.stream.groupid>
-    <xchange.stream.version>4.4.0</xchange.stream.version>
+    <xchange.stream.version>4.4.1-SNAPSHOT</xchange.stream.version>
 
     <morf.groupid>com.github.badgerwithagun.morf</morf.groupid>
     <morf.version>0.1.3.badgerwithagun.2</morf.version>
