--- a/orko-app-marketdata/src/test/resources/test-config.yml
+++ b/orko-app-marketdata/src/test/resources/test-config.yml
@@ -1,7 +1,7 @@
 scriptSigningKey: "WHATEVS"
 server:
   type: simple
-  rootPath: /api/
+  rootPath: /
   applicationContextPath: /
   connector:
     type: http
@@ -11,18 +11,25 @@ exchanges:
   simulated:
     apiKey: DEMO
   gdax:
+    enabled: false
     loadRemoteData: false
   binance:
+    enabled: false
     loadRemoteData: false
   kucoin:
+    enabled: false
     loadRemoteData: false
   bitfinex:
+    enabled: false
     loadRemoteData: false
   bitmex:
+    enabled: false
     loadRemoteData: false
   kraken:
+    enabled: false
     loadRemoteData: false
   bittrex:
+    enabled: false
     loadRemoteData: false
 jerseyClient:
   timeout: 30000ms
@@ -32,3 +39,6 @@ logging:
   loggers:
     "com.gruelbox.orko": INFO
     "si.mazi.rescu": ERROR
+  appenders:
+    - type: console
+      logFormat: "%-5p [%d{ISO8601,UTC}] [%t] %c: %m%n%rEx"
