--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <!-- Version: 3 -->
+  <!-- Version: 4 (increase to kick CircleCI's Maven cache which can be a bit temperamental) -->
   <modelVersion>4.0.0</modelVersion>
 
   <url>http://github.com/gruelbox/orko</url>
